--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    //"start": "webpack"
-    "build" : "webpack"
+    "start": "webpack"
   },
   "author": "",
   "license": "ISC",
